[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
hashbrown = "0.12"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[lib]
name = "db"
path = "db.rs"
